Bug 1097894: if the embedding level of a frame is unset, get the direction from style, r=dholbert